--- a/tcc2/src/pages/login.css
+++ b/tcc2/src/pages/login.css
@@ -1,9 +1,17 @@
-h2 {
-    text-align: center;
-    color: #3880ff;
-  }
-  
-  IonButton {
-    margin-top: 10px;
-  }
-  
+/* src/pages/Login.css */
+
+.ion-padding {
+  padding: 20px;
+}
+
+h1 {
+  color: #3880ff; /* Cor azul */
+}
+
+input {
+  margin: 10px 0; /* Margem para os campos de entrada */
+}
+
+.ion-button {
+  margin-top: 10px; /* Margem superior para o botão */
+}
